tests/behavior/error/null_pointer_arithmetic4.bz
function main()
{
	let p: ?*i32 = null;
	let _ = 1 + p;
}
